--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -56,7 +56,7 @@ This shift from description to interpretation is at the heart of data storytelli
 
 Visualisation is central to this process. While summary statistics offer a structural overview, visual displays make patterns tangible. Scatter plots and correlation matrices highlight relationships among numerical features; histograms and box plots clarify distributions and skewness; bar charts and mosaic visualisations reveal differences across categories. Choosing appropriate visual tools not only strengthens analysis but also improves communication.
 
-Storytelling through data is widely used across domains, from business and journalism to public policy and scientific research. A well-known example is Hans Rosling’s TED Talk [*New insights on poverty*](https://www.ted.com/talks/hans_rosling_new_insights_on_poverty), where decades of demographic and economic data are presented in an engaging, intuitive format. Figure @fig-EDA-fig-1, adapted from his presentation, shows how GDP per capita and life expectancy have changed across world regions from 1950 to 2019. Although drawn from global development, the same principles apply when exploring customer behaviour, financial trends, or service outcomes.
+Storytelling through data is widely used across domains, from business and journalism to public policy and scientific research. A well-known example is Hans Rosling’s TED Talk [*New insights on poverty*](https://www.ted.com/talks/hans_rosling_new_insights_on_poverty), where decades of demographic and economic data are presented in an engaging, intuitive format. Figure @fig-EDA-fig-1, adapted from his presentation, illustrates how GDP per capita and life expectancy have changed across world regions from 1950 to 2019. The figure is generated from the *gapminder* dataset available in the **liver** package and visualised using **ggplot2**. Although drawn from global development, the same principles apply when exploring customer behaviour, financial trends, or service outcomes.
 
 ```{r}
 #| label: fig-EDA-fig-1
@@ -67,13 +67,14 @@ Storytelling through data is widely used across domains, from business and journ
 data(gapminder, package = "liver")
 
 #ggplot_1 = ggplot(gapminder, aes(x = gdp, y = life_expectancy, col = continent, size = population / 10^6)) 
-ggplot_1 <- dplyr::filter(gapminder, !is.na(world_group) & world_group != "Others") |> 
+ggplot_1 = dplyr::filter(gapminder, year %in% c(1950, 2019) & !is.na(world_group) & world_group != "Others" &
+                    !is.na(gdp) & !is.na(life_expectancy) & !is.na(population)) |>
   ggplot(aes(x = gdp, y = life_expectancy, col = world_group, size = population / 10^6)) +
   geom_point(alpha = 0.8) +
   guides(size = "none") +
-  coord_cartesian(ylim = c(20, 90)) +
-  labs(x = "GDP per Capita (USD)",
-       y = "Life Expectancy")
+  coord_cartesian(ylim = c(20, 90)) + 
+  labs(x = 'GDP per Capita (USD)', 
+       y = 'Life Expectancy') 
 
 if(knitr::is_latex_output()){
   ggplot_1 + 
@@ -169,15 +170,6 @@ column_spec(3, width = "13em")
 By aligning objectives with guiding questions and appropriate methods, EDA becomes more than a routine diagnostic stage. It becomes a strategic component of the workflow that enhances data quality, informs feature construction, and lays the groundwork for effective modelling.
 
 The next section applies these principles through a detailed EDA of customer churn, showing how statistical summaries, visual tools, and domain understanding can uncover patterns that support predictive analysis.
-
-
-
-
-
-
-
-
-
 
 ## EDA in Practice: The *churnCredit* Dataset {#sec-ch4-EDA-churn}
 
