--- a/2-Intro-data-science.qmd
+++ b/2-Intro-data-science.qmd
@@ -12,13 +12,15 @@ The goal is to turn data into information, and information into insight.
 \end{chapterquote}
 :::
 
-::: {.content-visible when-format="html"}
-::: {.chapterquote}
+::::: {.content-visible when-format="html"}
+:::: chapterquote
 The goal is to turn data into information, and information into insight.
 
-<div class="author">— Carly Fiorina</div>
+::: author
+— Carly Fiorina
 :::
-:::
+::::
+:::::
 
 How does Netflix know what you want to watch, or how can a hospital predict patient risk before symptoms appear? Behind these intelligent systems lies the power of *data science* and *machine learning*. This chapter offers your entry point into that world, even if you have never written a line of code or studied statistics before.
 
